--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<!-- index.html in your GitHub repo root -->
+<!-- GitHub Pages index.html for Obelisk GLB Viewer -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Obelisk Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    html, body { margin:0; padding:0; overflow:hidden; }
-    canvas { display:block; width:100vw; height:100vh; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      background: #000;
+    }
+    canvas {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
@@ -15,25 +27,50 @@
     import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js';
     import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js';
 
-    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('three-canvas'), antialias:true, alpha:true });
-    renderer.setSize(innerWidth, innerHeight);
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(45, innerWidth/innerHeight, 0.1, 1000);
-    camera.position.set(0,1,3);
-    scene.add(new THREE.HemisphereLight(0xffffff,0x444444,1));
+    const canvas = document.getElementById('three-canvas');
+    const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
 
-    new GLTFLoader().load(
-      'https://<your-username>.github.io/<your-repo>/obelisk.glb',
-      gltf => { scene.add(gltf.scene); animate(); },
-      null,
-      err => console.error(err)
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(
+      45,
+      window.innerWidth / window.innerHeight,
+      0.1,
+      1000
+    );
+    camera.position.set(0, 1, 3);
+
+    const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
+    scene.add(hemiLight);
+
+    const loader = new GLTFLoader();
+    loader.load(
+      'https://notdylan7055.github.io/NOTDYLANARGHosting/obelisk.glb',
+      gltf => {
+        scene.add(gltf.scene);
+        animate();
+      },
+      undefined,
+      error => {
+        console.error('GLB load error', error);
+      }
     );
 
-    window.addEventListener('resize', ()=> {
-      camera.aspect = innerWidth/innerHeight;
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
-      renderer.setSize(innerWidth, innerHeight);
+      renderer.setSize(window.innerWidth, window.innerHeight);
     });
+
+    function animate() {
+      requestAnimationFrame(animate);
+      scene.rotation.y += 0.005;
+      renderer.render(scene, camera);
+    }
+  </script>
+</body>
+</html>
 
     function animate() {
       requestAnimationFrame(animate);
