--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- GitHub Pages index.html for Obelisk GLB Viewer -->
+<!-- GitHub Pages index.html for Obelisk GLB Viewer (UMD build) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,46 +23,49 @@
 </head>
 <body>
   <canvas id="three-canvas"></canvas>
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js';
-    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js';
 
+  <!-- UMD Three.js and GLTFLoader -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/loaders/GLTFLoader.js"></script>
+
+  <script>
+    // Renderer
     const canvas = document.getElementById('three-canvas');
     const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.setPixelRatio(window.devicePixelRatio);
 
+    // Scene & Camera
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(
-      45,
-      window.innerWidth / window.innerHeight,
-      0.1,
-      1000
-    );
+    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
     camera.position.set(0, 1, 3);
 
+    // Light
     const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
     scene.add(hemiLight);
 
-    const loader = new GLTFLoader();
+    // Load GLB
+    const loader = new THREE.GLTFLoader();
     loader.load(
       'https://notdylan7055.github.io/NOTDYLANARGHosting/obelisk.glb',
-      gltf => {
+      function (gltf) {
         scene.add(gltf.scene);
         animate();
       },
       undefined,
-      error => {
-        console.error('GLB load error', error);
+      function (error) {
+        console.error('GLB load error:', error);
       }
     );
 
-    window.addEventListener('resize', () => {
+    // Resize handling
+    window.addEventListener('resize', function () {
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
 
+    // Animation loop
     function animate() {
       requestAnimationFrame(animate);
       scene.rotation.y += 0.005;
@@ -71,3 +74,4 @@
   </script>
 </body>
 </html>
+
