--- a/index.html
+++ b/index.html
@@ -25,10 +25,59 @@
   <canvas id="three-canvas"></canvas>
 
   <!-- UMD Three.js and GLTFLoader -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/loaders/GLTFLoader.js"></script>
+  <!-- Three.js core -->
+  <script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
+  <!-- GLTFLoader UMD build -->
+  <script src="https://unpkg.com/three@0.158.0/examples/js/loaders/GLTFLoader.js"></script>
 
   <script>
+    // Ensure loader is available
+    if (typeof THREE.GLTFLoader !== 'function') {
+      console.error('THREE.GLTFLoader is not a function on THREE:', THREE);
+    }
+    // Renderer
+    const canvas = document.getElementById('three-canvas');
+    const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+
+    // Scene & Camera
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 1, 3);
+
+    // Light
+    const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
+    scene.add(hemiLight);
+
+    // Load GLB
+    const loader = new THREE.GLTFLoader();
+    loader.load(
+      'https://notdylan7055.github.io/NOTDYLANARGHosting/obelisk.glb',
+      function (gltf) {
+        scene.add(gltf.scene);
+        animate();
+      },
+      undefined,
+      function (error) {
+        console.error('GLB load error:', error);
+      }
+    );
+
+    // Resize handling
+    window.addEventListener('resize', function () {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+
+    // Animation loop
+    function animate() {
+      requestAnimationFrame(animate);
+      scene.rotation.y += 0.005;
+      renderer.render(scene, camera);
+    }
+  </script>
     // Renderer
     const canvas = document.getElementById('three-canvas');
     const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
@@ -74,4 +123,3 @@
   </script>
 </body>
 </html>
-
