--- a/index.html
+++ b/index.html
@@ -1,125 +1,60 @@
-<!-- GitHub Pages index.html for Obelisk GLB Viewer (UMD build) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Obelisk Viewer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>GLB Viewer</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      background: #000;
-    }
-    canvas {
-      display: block;
-      width: 100%;
-      height: 100%;
-    }
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
   </style>
 </head>
 <body>
-  <canvas id="three-canvas"></canvas>
-
-  <!-- UMD Three.js and GLTFLoader -->
-  <!-- Three.js core -->
   <script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
-  <!-- GLTFLoader UMD build -->
   <script src="https://unpkg.com/three@0.158.0/examples/js/loaders/GLTFLoader.js"></script>
-
   <script>
-    // Ensure loader is available
-    if (typeof THREE.GLTFLoader !== 'function') {
-      console.error('THREE.GLTFLoader is not a function on THREE:', THREE);
-    }
-    // Renderer
-    const canvas = document.getElementById('three-canvas');
-    const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
-
-    // Scene & Camera
+    // Set up scene, camera, renderer
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+    scene.background = new THREE.Color(0xeeeeee);
+
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
     camera.position.set(0, 1, 3);
 
-    // Light
-    const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
-    scene.add(hemiLight);
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
-    // Load GLB
+    // Light
+    const light = new THREE.HemisphereLight(0xffffff, 0x444444);
+    light.position.set(0, 20, 0);
+    scene.add(light);
+
+    // Load model
     const loader = new THREE.GLTFLoader();
     loader.load(
-      'https://notdylan7055.github.io/NOTDYLANARGHosting/obelisk.glb',
+      'obelisk.glb', // your model file in the same directory
       function (gltf) {
-        scene.add(gltf.scene);
+        const model = gltf.scene;
+        scene.add(model);
+
+        // Rotate model
+        function animate() {
+          requestAnimationFrame(animate);
+          model.rotation.y += 0.01;
+          renderer.render(scene, camera);
+        }
         animate();
       },
       undefined,
       function (error) {
-        console.error('GLB load error:', error);
+        console.error('Error loading model:', error);
       }
     );
 
-    // Resize handling
-    window.addEventListener('resize', function () {
-      camera.aspect = window.innerWidth / window.innerHeight;
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth/window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
-
-    // Animation loop
-    function animate() {
-      requestAnimationFrame(animate);
-      scene.rotation.y += 0.005;
-      renderer.render(scene, camera);
-    }
-  </script>
-    // Renderer
-    const canvas = document.getElementById('three-canvas');
-    const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
-
-    // Scene & Camera
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1, 3);
-
-    // Light
-    const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
-    scene.add(hemiLight);
-
-    // Load GLB
-    const loader = new THREE.GLTFLoader();
-    loader.load(
-      'https://notdylan7055.github.io/NOTDYLANARGHosting/obelisk.glb',
-      function (gltf) {
-        scene.add(gltf.scene);
-        animate();
-      },
-      undefined,
-      function (error) {
-        console.error('GLB load error:', error);
-      }
-    );
-
-    // Resize handling
-    window.addEventListener('resize', function () {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-
-    // Animation loop
-    function animate() {
-      requestAnimationFrame(animate);
-      scene.rotation.y += 0.005;
-      renderer.render(scene, camera);
-    }
   </script>
 </body>
 </html>
