--- a/index.html
+++ b/index.html
@@ -2,59 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>GLB Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>3D Model Viewer</title>
+  <!-- Import the model-viewer component -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #f0f0f0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    model-viewer {
+      width: 80vw;
+      height: 80vh;
+      max-width: 800px;
+      max-height: 800px;
+      border-radius: 8px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      background-color: white;
+    }
   </style>
 </head>
 <body>
-  <script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.158.0/examples/js/loaders/GLTFLoader.js"></script>
-  <script>
-    // Set up scene, camera, renderer
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0xeeeeee);
-
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1, 3);
-
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Light
-    const light = new THREE.HemisphereLight(0xffffff, 0x444444);
-    light.position.set(0, 20, 0);
-    scene.add(light);
-
-    // Load model
-    const loader = new THREE.GLTFLoader();
-    loader.load(
-      'obelisk.glb', // your model file in the same directory
-      function (gltf) {
-        const model = gltf.scene;
-        scene.add(model);
-
-        // Rotate model
-        function animate() {
-          requestAnimationFrame(animate);
-          model.rotation.y += 0.01;
-          renderer.render(scene, camera);
-        }
-        animate();
-      },
-      undefined,
-      function (error) {
-        console.error('Error loading model:', error);
-      }
-    );
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth/window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-  </script>
+  <!-- Replace "model.glb" with your filename -->
+  <model-viewer
+    src="model.glb"
+    alt="A 3D model"
+    auto-rotate
+    rotation-per-second="30deg"
+    camera-controls
+    environment-image="neutral"
+    exposure="1"
+    shadow-intensity="0.5">
+  </model-viewer>
 </body>
 </html>
