--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <!-- Replace "model.glb" with your filename -->
   <model-viewer
-    src="model.glb"
+    src="obelisk.glb"
     alt="A 3D model"
     auto-rotate
     rotation-per-second="30deg"
