--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       max-height: 800px;
       border-radius: 8px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      background-color: white;
+      background-color: black;
     }
   </style>
 </head>
