--- a/index.html
+++ b/index.html
@@ -2,42 +2,85 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3D Model Viewer</title>
   <!-- Import the model-viewer component -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
+    /* Full-page black background */
     body, html {
       margin: 0;
       padding: 0;
+      width: 100%;
       height: 100%;
-      background: #f0f0f0;
+      background-color: #000;
       display: flex;
       align-items: center;
       justify-content: center;
     }
-    model-viewer {
+
+    /* Container for positioning overlays */
+    .viewer-container {
+      position: relative;
       width: 80vw;
       height: 80vh;
       max-width: 800px;
       max-height: 800px;
+    }
+
+    /* The 3D viewer sits above the red circle but below the haze */
+    .viewer-container model-viewer {
+      width: 100%;
+      height: 100%;
       border-radius: 8px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      background-color: black;
+      background-color: #000;
+      position: relative;
+      z-index: 2;
+    }
+
+    /* Dull black haze overlay (in front of model) */
+    .viewer-container::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      pointer-events: none;
+      border-radius: 8px;
+      z-index: 3;
+    }
+
+    /* Semi-transparent red circle behind the model */
+    .viewer-container::after {
+      content: "";
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: rgba(255, 0, 0, 0.3);
+      border-radius: 50%;
+      bottom: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      pointer-events: none;
+      z-index: 1;
     }
   </style>
 </head>
 <body>
-  <!-- Replace "model.glb" with your filename -->
-  <model-viewer
-    src="obelisk.glb"
-    alt="A 3D model"
-    auto-rotate
-    rotation-per-second="30deg"
-    camera-controls
-    environment-image="neutral"
-    exposure="1"
-    shadow-intensity="0.5">
-  </model-viewer>
+  <div class="viewer-container">
+    <!-- Replace "model.glb" with your filename -->
+    <model-viewer
+      src="obelisk.glb"
+      alt="A 3D model"
+      auto-rotate
+      rotation-per-second="30deg"
+      camera-controls
+      environment-image="neutral"
+      exposure="1"
+      shadow-intensity="0.5">
+    </model-viewer>
+  </div>
 </body>
 </html>
