--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D Model Viewer</title>
+  <title>obelisk</title>
   <!-- Import the model-viewer component -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
@@ -70,8 +70,7 @@
 </head>
 <body>
   <div class="viewer-container">
-    <!-- Replace "model.glb" with your filename -->
-    <model-viewer
+    <model-viewer>
       src="obelisk.glb"
       alt="A 3D model"
       auto-rotate
