--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="viewer-container">
-    <model-viewer>
+    <model-viewer
       src="obelisk.glb"
       alt="A 3D model"
       auto-rotate
